--- a/.github/workflows/ARMv8_Build.yml
+++ b/.github/workflows/ARMv8_Build.yml
@@ -86,33 +86,33 @@ jobs:
         sudo xz -d Armbian*VPlus*\+o*
         sudo mv *.img imgs
         cd /opt/openwrt
-        sudo wget $(curl -s https://api.github.com/repos/8688Add/N1-Actions-Dabao/releases/40798723 | grep browser_download_url | cut -d '"' -f 4)
+        sudo wget $(curl -s https://api.github.com/repos/HoldOnBro/Actions-OpenWrt/releases/34554768 | grep browser_download_url | cut -d '"' -f 4)
         chmod +x $GITHUB_WORKSPACE/$Update_Ver_SH
         sudo $GITHUB_WORKSPACE/$Update_Ver_SH
         sudo ./mk_rk3328_beikeyun.sh
-#        sudo ./mk_rk3328_beikeyun_fol.sh
-#        sudo ./mk_rk3328_beikeyun_plus.sh
+        sudo ./mk_rk3328_beikeyun_fol.sh
+        sudo ./mk_rk3328_beikeyun_plus.sh
         sudo ./mk_rk3328_l1pro.sh
-#        sudo ./mk_rk3328_l1pro_fol.sh
-#        sudo ./mk_rk3328_l1pro_plus.sh
+        sudo ./mk_rk3328_l1pro_fol.sh
+        sudo ./mk_rk3328_l1pro_plus.sh
         sudo ./mk_s905d_n1.sh
-#        sudo ./mk_s905d_n1_fol.sh
-#        sudo ./mk_s905d_n1_plus.sh
+        sudo ./mk_s905d_n1_fol.sh
+        sudo ./mk_s905d_n1_plus.sh
         #sudo ./mk_s905x2_x96max.sh
-#        #sudo ./mk_s905x2_x96max_fol.sh
-#        #sudo ./mk_s905x2_x96max_plus.sh
+        #sudo ./mk_s905x2_x96max_fol.sh
+        #sudo ./mk_s905x2_x96max_plus.sh
         sudo ./mk_s905x3_multi.sh
-#        sudo ./mk_s905x3_multi_fol.sh
-#        sudo ./mk_s905x3_multi_plus.sh
+        sudo ./mk_s905x3_multi_fol.sh
+        sudo ./mk_s905x3_multi_plus.sh
         sudo ./mk_s912_zyxq.sh
-#        sudo ./mk_s912_zyxq_fol.sh
-#        sudo ./mk_s912_zyxq_plus.sh
+        sudo ./mk_s912_zyxq_fol.sh
+        sudo ./mk_s912_zyxq_plus.sh
         #sudo ./mk_s922x_gtking.sh
-#        #sudo ./mk_s922x_gtking_fol.sh
-#        #sudo ./mk_s922x_gtking_plus.sh
+        #sudo ./mk_s922x_gtking_fol.sh
+        #sudo ./mk_s922x_gtking_plus.sh
         sudo ./mk_h6_vplus.sh
-#        sudo ./mk_h6_vplus_fol.sh
-#        sudo ./mk_h6_vplus_plus.sh
+        sudo ./mk_h6_vplus_fol.sh
+        sudo ./mk_h6_vplus_plus.sh
         sudo cp ./*AllPackages.tar.gz ./tmp/
         echo "::set-output name=status::success"
 
