--- a/aarch64/ARMv8_Docker.config
+++ b/aarch64/ARMv8_Docker.config
@@ -34,6 +34,7 @@ CONFIG_PACKAGE_chattr=y
 # CONFIG_PACKAGE_debugfs is not set
 CONFIG_PACKAGE_dosfstools=y
 CONFIG_PACKAGE_dumpe2fs=y
+CONFIG_PACKAGE_docker-compose=y
 CONFIG_PACKAGE_e2freefrag=y
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_f2fs-tools=y
