--- a/aarch64/ARMv8_Docker.config
+++ b/aarch64/ARMv8_Docker.config
@@ -78,7 +78,7 @@ CONFIG_PACKAGE_xfs-mkfs=y
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 # CONFIG_PACKAGE_luci-app-webadmin is not set
-CONFIG_PACKAGE_install-program=y
+# CONFIG_PACKAGE_install-program is not set
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
